# idetic-atmospheric-chamber

./: .gitignore  PROJECT_SEED.md  README.md
analysis/: README.md
docs/: 01-overview.md  02-hardware-bom.md  03-electrical-design.md  04-safety.md  05-firmware-architecture.md  06-orchestrator-architecture.md  07-mqtt-schema.md  08-experimental-protocols.md  Practica_Laboratorio_IoT_MQTT.doc  ~$actica_Laboratorio_IoT_MQTT.doc
docs/datasheets/: README.md
docs/wiring-diagrams/: README.md
firmware/esp32-module/: platformio.ini  secrets.ini.example
firmware/esp32-module/include/: board_config.h
firmware/esp32-module/src/: fan.cpp  fan.h  heater.cpp  heater.h  main.cpp  mqtt_client.cpp  mqtt_client.h  ota.cpp  ota.h  safety.cpp  safety.h  sensors.cpp  sensors.h  state_machine.cpp  state_machine.h
hardware/: README.md
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __init__.py  __main__.py  config.py  models.py  mqtt_bridge.py  topics.py
orchestrator/src/orchestrator/analysis/: __init__.py  cn2.py
orchestrator/src/orchestrator/broker_config/: mosquitto.conf
orchestrator/src/orchestrator/control/: __init__.py
orchestrator/src/orchestrator/logging/: __init__.py  writer.py
orchestrator/src/orchestrator/modules/: __init__.py  manager.py
orchestrator/src/orchestrator/ota/: __init__.py  manager.py  server.py
orchestrator/src/orchestrator/ui/: __init__.py
orchestrator/tests/: test_cn2.py  test_manager.py  test_ota.py
tools/: calibrate-ds18b20.py  flash-all-modules.sh  generate_lab.py  log-replay.py  ota-rollout.py  publish-firmware.py
(+1 files in other folders)
