[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chamber-orchestrator"
version = "0.1.0"
description = "Raspberry Pi 5 orchestrator for the IDeTIC atmospheric turbulence chamber"
requires-python = ">=3.11"
authors = [{ name = "IDeTIC / ULPGC" }]
dependencies = [
    "aiomqtt>=2.0",        # async MQTT (paho wrapper)
    "pydantic>=2.6",       # config + telemetry models
    "numpy>=1.26",         # Cn2 / structure-function math
    "h5py>=3.10",          # HDF5 logging
    "PyYAML>=6.0",         # module config files
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.110",      # touch UI option A (FastAPI + HTMX kiosk)
    "uvicorn>=0.29",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
chamber-orchestrator = "orchestrator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
